--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="column">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 class="score" id="guest">0</h2>
                 <div>
                     <button id="btn1" onclick="click1g()"> +1</button>
