--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div class="column">
-                <h3>HOME</h3>
+                <h3>ALIENS</h3>
                 <h2 class="score" id="home">0</h2>
                 <div>
                     <button id="btn1" onclick="click1()"> +1</button>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="column">
-                <h3>AWAY</h3>
+                <h3>UNICORNS</h3>
                 <h2 class="score" id="guest">0</h2>
                 <div>
                     <button id="btn1" onclick="click1g()"> +1</button>
